change name to pyseing

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
 cmake_minimum_required(VERSION 3.4)
-project(seing4python)
+project(pyseing)
 add_subdirectory(pybind11)
-pybind11_add_module(seing4python seing4python.cpp)
+pybind11_add_module(pyseing seing4python.cpp)
